--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -139,20 +139,22 @@
                             </svg>
                             <span class="flurstueck">
                                 <span *ngIf="flurstueck.features[0]?.properties.gemarkungsnummer">
-                                    <small class="ml-2 mr-2"
-                                           i18n>Gemarkung:
+                                    <small class="ml-2 mr-2">
+                                        <span i18n>Gemarkung</span>:
                                         {{ flurstueck.features[0].properties.gemarkungsnummer }}
                                     </small>
                                 </span>
                                 <span *ngIf="flurstueck.features[0]?.properties.flurnummer">
-                                    <small class="mr-2"
-                                           i18n>Flurnummer:
+                                    <small class="mr-2">
+                                        <span i18n>Flurnummer</span>:
                                         {{ flurstueck.features[0].properties.flurnummer }}
                                     </small>
                                 </span>
                                 <span *ngIf="flurstueck.features[0]?.properties.zaehler">
-                                    <small i18n>Flurstück:
-                                        {{ flurstueck.features[0].properties.zaehler }}</small>
+                                    <small>
+                                        <span i18n>Flurstück</span>:
+                                        {{ flurstueck.features[0].properties.zaehler }}
+                                    </small>
                                     <small *ngIf="flurstueck.features[0]?.properties.nenner">/{{
                                         flurstueck.features[0].properties.nenner }}
                                     </small>
@@ -198,20 +200,22 @@
                             </svg>
                             <span class="flurstueck">
                                 <span *ngIf="flurstueck.features[0]?.properties.gemarkungsnummer">
-                                    <small class="ml-2 mr-2"
-                                           i18n>Gemarkung:
+                                    <small class="ml-2 mr-2">
+                                        <span i18n>Gemarkung</span>:
                                         {{ flurstueck.features[0].properties.gemarkungsnummer }}
                                     </small>
                                 </span>
                                 <span *ngIf="flurstueck.features[0]?.properties.flurnummer">
-                                    <small class="mr-2"
-                                           i18n>Flurnummer:
+                                    <small class="mr-2">
+                                        <span i18n>Flurnummer</span>:
                                         {{ flurstueck.features[0].properties.flurnummer }}
                                     </small>
                                 </span>
                                 <span *ngIf="flurstueck.features[0]?.properties.zaehler">
-                                    <small i18n>Flurstück:
-                                        {{ flurstueck.features[0].properties.zaehler }}</small>
+                                    <small>
+                                        <span i18n>Flurstück</span>:
+                                        {{ flurstueck.features[0].properties.zaehler }}
+                                    </small>
                                     <small *ngIf="flurstueck.features[0]?.properties.nenner">/{{
                                         flurstueck.features[0].properties.nenner }}
                                     </small>
@@ -287,7 +291,7 @@
                                 <p class="m-3 mx-center lead"
                                    i18n>Keine gültige Adresse!</p>
                                 <p class="m-3 mx-center lead"
-                                   i18n>Hinweis:</p>
+                                   i18n>Hinweis</p>:
                                 <p class="m-3 mx-center"
                                    i18n>Bitte wählen Sie eine gültige Adresse innerhalb von Niedersachsen oder
                                     Bremen
@@ -304,9 +308,11 @@
                                 </div>
                                 <div *ngIf="flurstueck"
                                      class="text-center col-36">
-                                    <p class="m-3 mx-center"
-                                       i18n>Die aufgeführten Informationen zum Flurstück beziehen sich lediglich auf den
-                                        aktuell ausgewählten Standort und auf den Stichtag {{ getStichtag() | date }}.
+                                    <p class="m-3 mx-center">
+                                        <span i18n>Die aufgeführten Informationen zum Flurstück beziehen sich lediglich
+                                            auf den
+                                            aktuell ausgewählten Standort und auf den Stichtag</span>
+                                        {{ getStichtag() | date }}.
                                     </p>
                                 </div>
                                 <div *ngIf="adresse && (adresse.properties.bundesland == 'Niedersachsen' || adresse.properties.bundesland == 'Bremen') && !features.features.length"
