--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -189,9 +189,7 @@
 
             <div *ngIf="this.rss.length === 0">
                 <div class="text-center">
-                    <span i18n>Leider konnten wir noch keine Tickets finden. Bei Bedarf können Sie uns gerne
-                        kontaktieren.
-                    </span>
+                    <span i18n>Leider konnten wir noch keine Tickets finden. Bei Bedarf können Sie uns gerne kontaktieren.</span>
                 </div>
             </div>
         </div>
