--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -58,8 +58,7 @@
                               i18n>Landesgrund&shy;stücks&shy;markt&shy;daten</span>
                     </h2>
                     <div class="lead text-dark">
-                        <p i18n>Eine Analyse des Grundstücksmarktes in ganz Niedersachsen vom oberen Gutachterausschuss
-                        </p>
+                        <p i18n>Eine Analyse des Grundstücksmarktes in ganz Niedersachsen vom oberen Gutachterausschuss</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('landesgrundstuecksmarktdaten')"
@@ -354,8 +353,7 @@
                         (Vergleichsfaktoren), die durch die Gutachterausschüsse für Grundstückswerte aus der
                         Kaufpreissammlung mit Hilfe mathematisch-statistischer Verfahren (multiple Regression) ermittelt
                         werden. Eine Auskunft auf Grundlage des Immobilien-Preis-Kalkulators ist
-                        <strong class="font-weight-bold">gebührenpflichtig</strong>.
-                    </p>
+                        <strong class="font-weight-bold">gebührenpflichtig</strong>.</p>
                 </div>
             </div>
             <div class="col-md-5 d-flex justify-content-center align-self-center"
