--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -2,8 +2,8 @@
 <div class="card m-0 mb-2"
      role="table">
     <div class="card-header">
-        <div class="sr-only caption"
-             i18n>Tabelle Bodenrichtwertzone {{ feature.properties.nutzung | nutzung }}</div>
+        <div class="sr-only caption">
+            <span i18n>Tabelle Bodenrichtwertzone</span> {{ feature.properties.nutzung | nutzung }}</div>
         <div class="row">
             <h5 class="col-md-5 mb-0"
                 role="rowheader"><b>{{brzStrings.brz | hyphenate}} </b>
