--- a/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
@@ -29,8 +29,7 @@
                                aria-describedby="gemarkungHelpText">
                         <small id="gemarkungHelpText"
                                class="form-text text-muted"
-                               i18n>Suche nach Gemarkung, Gemeinde oder Gemarkungschlüssel
-                        </small>
+                               i18n>Suche nach Gemarkung, Gemeinde oder Gemarkungschlüssel</small>
                   </div>
             </div>
             <div class="form-row py-1">
