--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -104,7 +104,7 @@
                            (click)="isCollapsed = true; isCollapsedImmo = true"
                            [routerLink]="['/landesgrundstuecksmarktberichte']"
                            routerLinkActive="active"
-                           i18n>Landesgrundstücksmarktberichte (Archiv)</a>
+                           i18n>Landesgrundstücksmarktberichte</a>
                         <div class="dropdown-divider"
                              *ngIf="config.modules.includes('landesgrundstuecksmarktberichte')"></div>
 
