--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -2,9 +2,9 @@
 
     <div class="row title justify-content-center m-0 p-2 p-lg-3 text-center">
         <h1 *ngIf="mode === 'gmb'"
-            i18n>Grund&shy;stücks&shy;markt&shy;berichte (Archiv)</h1>
+            i18n>Grund&shy;stücks&shy;markt&shy;berichte</h1>
         <h1 *ngIf="mode === 'lmb'"
-            i18n>Landes&shy;grund&shy;stücks&shy;markt&shy;berichte (Archiv)</h1>
+            i18n>Landes&shy;grund&shy;stücks&shy;markt&shy;berichte</h1>
     </div>
 
     <div *ngIf="mode === 'gmb'"
@@ -62,7 +62,9 @@
         <div class="card-header">
             <div class="row">
                 <h5 class="col-md-12 mb-0"
-                    role="rowheader"><b>{{rd.name}}</b>
+                    role="rowheader">
+                    <b *ngIf="rd.name !== 'Niedersachsen'">Gutachterausschuss </b>
+                    <b>{{rd.name}}</b>
                 </h5>
                 <!--<h5 class="col-md-7 mb-0"
                     role="cell">(bis 2012)
@@ -70,7 +72,7 @@
             </div>
         </div>
         <div class="card-body">
-            <dl *ngFor="let bj of rd.berichte | keyvalue"
+            <dl *ngFor="let bj of rd.berichte"
                 class="row"
                 role="rowgroup">
                 <div class="col-md-12 p-0">
