fixed linter error

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -214,7 +214,7 @@
                                             i18n-title
                                             [ngClass]="{'active' : functionsActive}"
                                             dropdownToggle
-                                            id="dropdownMenuButton"
+                                            id="dropdownMenuButtonMobile"
                                             aria-haspopup="true"
                                             aria-expanded="false">
                                         <svg xmlns="http://www.w3.org/2000/svg"
