--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -73,11 +73,11 @@
 
 <!-- DetailsContent Template-->
 <ng-template #detailsContent>
-    <div class="overflow-auto details-content-height">
-        <div class="row m-0 p-lg-2 p-1 well well-lg card card-block card-header rounded-0">
+    <div class="p-1 overflow-auto card card-header rounded-0 details-content-height">
+        <div class="row m-0 p-lg-2 p-1">
+            <ng-template [ngTemplateOutlet]="detailsHints"></ng-template>
             <div *ngIf="features?.features.length"
                  class="col-12 p-0">
-                <ng-template [ngTemplateOutlet]="detailsHints"></ng-template>
 
                 <power-bodenrichtwert-detail [stichtag]="stichtag"
                                              [teilmarkt]="teilmarkt"
@@ -152,7 +152,7 @@
 <!-- DetailsHints Template -->
 <ng-template #detailsHints>
     <!-- hints for no address and no features -->
-    <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen' || adresse.properties.bundesland != 'Bremen') && !features.features.length"
+    <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen' || adresse.properties.bundesland != 'Bremen') && !features?.features.length"
          class="text-center">
         <p class="p-1 m-0"
            i18n>Keine gültige Adresse!</p>
@@ -164,7 +164,7 @@
     </div>
     <!-- hints from info button -->
     <div [class]="hintsActive ? 'd-block pb-2' : 'd-none'">
-        <div *ngIf="adresse || features.features.length"
+        <div *ngIf="adresse || features?.features.length"
              class="text-center">
             <p class="p-1 m-0 small"
                i18n>Aufgrund von unterschiedlichen Aktualisierungsintervallen können die
@@ -178,12 +178,12 @@
                 aktuell ausgewählten Standort und auf den Stichtag {{ getStichtag() | date }}.
             </p>
         </div>
-        <div *ngIf="adresse && (adresse.properties.bundesland == 'Niedersachsen' || adresse.properties.bundesland == 'Bremen') && !features.features.length"
+        <div *ngIf="adresse && (adresse.properties.bundesland == 'Niedersachsen' || adresse.properties.bundesland == 'Bremen') && !features?.features.length"
              class="text-center">
             <p class="p-1 m-0 small"
                i18n>Es liegen keine Bodenrichtwertdaten für diese Adresse vor.</p>
         </div>
-        <div *ngIf="!adresse && features.features.length"
+        <div *ngIf="!adresse && features?.features.length"
              class="text-center">
             <p class="p-1 m-0 small"
                i18n>Es liegen Bodenrichtwertdaten für diese Koordinate vor. Jedoch konnte keine
