--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -4,7 +4,12 @@
              class="p-0 border-bottom map-height"
              [class]="isCollapsed ? 'col d-block' : 'col-lg-6'">
             <!-- map component -->
-            <power-bodenrichtwertkarte #map
+            <power-navigation [(stichtag)]="stichtag"
+                              [(teilmarkt)]="teilmarkt"
+                              [(flurstueck)]="flurstueck"
+                              [(features)]="features"
+                              [(adresse)]="adresse"></power-navigation>
+            <!-- <power-bodenrichtwertkarte #map
                                        [(isCollapsed)]="isCollapsed"
                                        [collapsed]="collapsed"
                                        [expanded]="expanded"
@@ -12,7 +17,7 @@
                                        [(features)]="features"
                                        [(stichtag)]="stichtag"
                                        [(teilmarkt)]="teilmarkt"
-                                       [(flurstueck)]="flurstueck"></power-bodenrichtwertkarte>
+                                       [(flurstueck)]="flurstueck"></power-bodenrichtwertkarte> -->
         </div>
         <!-- collapsing sidebar -->
         <div class="p-0 border-left"
