--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -16,8 +16,10 @@
                     </h2>
                     <div class="lead text-dark">
                         <h3 class="h5"
-                            i18n>Bodenrichtwert&shy;informationssystem Niedersachsen</h3>
-                        <p i18n>Auskünfte über Bodenrichtwerte für Bauland und Flächen der Land- und Forstwirtschaft</p>
+                            i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system
+                            Niedersachsen</h3>
+                        <p i18n="@@bodenrichtwerte_shortdescription">Auskünfte über Bodenrichtwerte für Bauland und
+                            Flächen der Land- und Forstwirtschaft</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('bodenrichtwerte')"
@@ -34,11 +36,11 @@
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
                         <span style="color: #343a40;"
-                              i18n>Grundstücks&shy;markt&shy;berichte</span>
+                              i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücks&shy;markt&shy;berichte</span>
                     </h2>
                     <div class="lead text-dark">
-                        <p i18n>Einblicke in den Grundstücksmarkt und der Entwicklung des Preisniveau der einzelnen
-                            Gutachterausschüsse</p>
+                        <p i18n="@@grundstuecksmarktberichte_shortdescription">Einblicke in den Grundstücksmarkt und der
+                            Entwicklung des Preisniveau der einzelnen Gutachterausschüsse</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('grundstuecksmarktberichte')"
@@ -55,11 +57,11 @@
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
                         <span style="color: #343a40;"
-                              i18n>Landesgrund&shy;stücks&shy;markt&shy;daten</span>
+                              i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrund&shy;stücks&shy;markt&shy;daten</span>
                     </h2>
                     <div class="lead text-dark">
-                        <p i18n>Eine Analyse des Grundstücksmarktes in ganz Niedersachsen vom oberen Gutachterausschuss
-                        </p>
+                        <p i18n="@@landesgrundstuecksmarktdaten_shortdescription">Eine Analyse des Grundstücksmarktes in
+                            ganz Niedersachsen vom oberen Gutachterausschuss</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('landesgrundstuecksmarktdaten')"
@@ -81,7 +83,8 @@
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n>Niedersächsischer Immobilienpreisindex</h3>
-                        <p i18n>Darstellung der Preisentwicklung von Eigenheimen und Eigentumswohnungen</p>
+                        <p i18n="@@immobilienpreisindex_shortdescription">Darstellung der Preisentwicklung von
+                            Eigenheimen und Eigentumswohnungen</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('immobilienpreisindex')"
@@ -103,7 +106,8 @@
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n>Immobilien-Preis-Kalkulator</h3>
-                        <p i18n>Ein Rechner zum ermitteln eines geschätzten Preisniveau einer Immobilien</p>
+                        <p i18n="@@immobilienpreiskalkulator_shortdescription">Ein Rechner zum ermitteln eines
+                            geschätzten Preisniveau einer Immobilien</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('immobilienpreiskalkulator')"
@@ -125,7 +129,8 @@
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n>Bodenwertkalkulator Niedersachsen</h3>
-                        <p i18n>Rechner zum summieren von geschätzten Preisen von Flurstücken</p>
+                        <p i18n="@@bodenwertkalkulator_shortdescription">Rechner zum summieren von geschätzten Preisen
+                            von Flurstücken</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('bodenwertkalkulator')"
@@ -147,7 +152,8 @@
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n>Online Formular Service</h3>
-                        <p i18n>Wenn Sie ein Formular einreichen wollen, finden Sie hier unsere Formulare</p>
+                        <p i18n="@@forms_shortdescription">Wenn Sie ein Formular einreichen wollen, finden Sie hier
+                            unsere Formulare</p>
                         <a class="btn btn-primary"
                            href="javascript:;"
                            (click)="scrollToElement('forms')"
@@ -169,7 +175,8 @@
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n>Fehler oder Vorschlag einreichen</h3>
-                        <p i18n>Wir schätzen Ihr Feedback sehr, bitte helfen Sie uns unseren Service zu verbessern!</p>
+                        <p i18n="@@feedback_shortdescription">Wir schätzen Ihr Feedback sehr, bitte helfen Sie uns
+                            unseren Service zu verbessern!</p>
                         <a class="btn btn-primary"
                            [routerLink]="['/feedback']"
                            role="button"
@@ -193,9 +200,9 @@
                 </a>
                 <div class="lead">
                     <h3 class="h5 text-break"
-                        i18n>Bodenrichtwertinformations&shy;system Niedersachsen</h3>
+                        i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system Niedersachsen</h3>
                     <p class="text-justify"
-                       i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für
+                       i18n="@@bodenrichtwerte_description">Die Gutachterausschüsse und der Obere Gutachterausschuss für
                         Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI
                         Bodenrichtwerte für Bauland und für Flächen der Land- und Forstwirtschaft in Niedersachsen,
                         Bremen und Bremerhaven zur Verfügung.</p>
@@ -225,16 +232,16 @@
                 <a class="h2 display-4"
                    [routerLink]="['/grundstuecksmarktberichte']">
                     <span style="color: #343a40;"
-                          i18n>Grundstücksmarkt&shy;berichte</span>
+                          i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücks&shy;markt&shy;berichte</span>
                 </a>
                 <div class="lead">
                     <p class="text-justify"
-                       i18n>Grundstücksmarktberichte geben einen fundierten Einblick in das Geschehen am
-                        Grundstücksmarkt, insbesondere über Umsätze, Preisentwicklungen sowie Preisniveau in den
-                        Teilmärkten, aber auch zu detaillierteren Zahlen und Kenngrößen. Die Berichte wenden sich an
-                        interessierte private und an professionelle Nutzerinnen und Nutzer. Die Herausgabe der
-                        Grundstücksmarktberichte obliegt den Gutachterausschüssen für Grundstückswerte, deren
-                        Zuständigkeit jeweils eine bestimmte Region in Niedersachsen abdeckt. Die Berichte sind
+                       i18n="@@grundstuecksmarktberichte_description">Grundstücksmarktberichte geben einen fundierten
+                        Einblick in das Geschehen am Grundstücksmarkt, insbesondere über Umsätze, Preisentwicklungen
+                        sowie Preisniveau in den Teilmärkten, aber auch zu detaillierteren Zahlen und Kenngrößen. Die
+                        Berichte wenden sich an interessierte private und an professionelle Nutzerinnen und Nutzer. Die
+                        Herausgabe der Grundstücksmarktberichte obliegt den Gutachterausschüssen für Grundstückswerte,
+                        deren Zuständigkeit jeweils eine bestimmte Region in Niedersachsen abdeckt. Die Berichte sind
                         kostenfrei verfügbar und werden als PDF-Dokumente bereitgestellt.</p>
                 </div>
             </div>
@@ -264,16 +271,16 @@
                    target="_blank"
                    rel="noopener noreferrer nofollow">
                     <span style="color: #343a40;"
-                          i18n>Landesgrundstücks&shy;markt&shy;daten</span>
+                          i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrund&shy;stücks&shy;markt&shy;daten</span>
                 </a>
                 <div class="lead">
                     <p class="text-justify"
-                       i18n>Als Ergänzung zu den örtlichen Grundstücksmarktberichten der Gutachterausschüsse stellen die
-                        Landesgrundstücksmarktdaten überregionale und weiter generalisierte Zusammenhänge zum
-                        Grundstücksmarkt dar. Sie sind geeignet, verschiedene Regionen in Niedersachsen miteinander zu
-                        vergleichen. Zuständig für die Auswertungen und Analysen ist der Obere Gutachterausschuss für
-                        Grundstückswerte. Bereitgestellt werden die kostenfreien Daten in Form von interaktiven
-                        Dashboards.</p>
+                       i18n="@@landesgrundstuecksmarktdaten_description">Als Ergänzung zu den örtlichen
+                        Grundstücksmarktberichten der Gutachterausschüsse stellen die Landesgrundstücksmarktdaten
+                        überregionale und weiter generalisierte Zusammenhänge zum Grundstücksmarkt dar. Sie sind
+                        geeignet, verschiedene Regionen in Niedersachsen miteinander zu vergleichen. Zuständig für die
+                        Auswertungen und Analysen ist der Obere Gutachterausschuss für Grundstückswerte. Bereitgestellt
+                        werden die kostenfreien Daten in Form von interaktiven Dashboards.</p>
                 </div>
             </div>
             <div class="col-md-5 d-flex justify-content-center align-self-center"
@@ -308,12 +315,11 @@
                     <h3 class="h5 text-break"
                         i18n>Niedersächsischer Immobilienpreisindex</h3>
                     <p class="text-justify"
-                       i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und
-                        Zweifamilienhäuser, Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der
-                        Obere
-                        Gutachterausschuss einen „Niedersächsischen Immobilienpreisindex für Eigenheime und
-                        Eigentumswohnungen (NIPIX)“ ab. Die Gutachterausschüsse und der Obere Gutachterausschuss für
-                        Grundstückswerte.</p>
+                       i18n="@@immobilienpreisindex_description">Zur Darstellung der Preisentwicklung von Eigenheimen
+                        (freistehende Ein- und Zweifamilienhäuser, Reihenhäuser und Doppelhaushälften) und
+                        Eigentumswohnungen leitet der Obere Gutachterausschuss einen „Niedersächsischen
+                        Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die Gutachterausschüsse
+                        und der Obere Gutachterausschuss für Grundstückswerte.</p>
                 </div>
             </div>
             <div class="col-md-5 d-flex justify-content-center align-self-center"
@@ -348,12 +354,13 @@
                     <h3 class="h5 text-break"
                         i18n>Immobilien-Preis-Kalkulator</h3>
                     <p class="text-justify"
-                       i18n>Mit Hilfe des Immobilien-Preis-Kalkulators können Sie schnell und einfach das Preisniveau
-                        für Ihr freistehendes Ein-/Zweifamilienhaus, Ihr Reihenhaus, Ihre Doppelhaushälfte oder Ihre
-                        Eigentumswohnung abschätzen. Der Immobilien-Preis-Kalkulator basiert auf Marktmodellen
-                        (Vergleichsfaktoren), die durch die Gutachterausschüsse für Grundstückswerte aus der
-                        Kaufpreissammlung mit Hilfe mathematisch-statistischer Verfahren (multiple Regression) ermittelt
-                        werden. Eine Auskunft auf Grundlage des Immobilien-Preis-Kalkulators ist
+                       i18n="@@immobilienpreiskalkulator_description">Mit Hilfe des Immobilien-Preis-Kalkulators können
+                        Sie schnell und einfach das Preisniveau für Ihr freistehendes Ein-/Zweifamilienhaus, Ihr
+                        Reihenhaus, Ihre Doppelhaushälfte oder Ihre Eigentumswohnung abschätzen. Der
+                        Immobilien-Preis-Kalkulator basiert auf Marktmodellen (Vergleichsfaktoren), die durch die
+                        Gutachterausschüsse für Grundstückswerte aus der Kaufpreissammlung mit Hilfe
+                        mathematisch-statistischer Verfahren (multiple Regression) ermittelt werden. Eine Auskunft auf
+                        Grundlage des Immobilien-Preis-Kalkulators ist
                         <strong class="font-weight-bold">gebührenpflichtig</strong>.
                     </p>
                 </div>
@@ -390,8 +397,8 @@
                     <h3 class="h5 text-break"
                         i18n>Bodenwertkalkulator Niedersachsen</h3>
                     <p class="text-justify"
-                       i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für
-                        Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI
+                       i18n="@@bodenwertkalkulator_description">Die Gutachterausschüsse und der Obere Gutachterausschuss
+                        für Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI
                         Bodenrichtwerte für Bauland und für Flächen der Land- und Forstwirtschaft in Niedersachsen,
                         Bremen und Bremerhaven zur Verfügung.</p>
                 </div>
@@ -426,9 +433,9 @@
                     <h3 class="h5 text-break"
                         i18n>Online Formular Service</h3>
                     <p class="text-justify"
-                       i18n>Hier können öffentliche und private Formulare des LGLN online ausgefüllt und
-                        abgeschickt werden. Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen
-                        direkt über die PIN abrufen und ausfüllen.</p>
+                       i18n="@@forms_description">Hier können öffentliche und private Formulare des LGLN online
+                        ausgefüllt und abgeschickt werden. Wenn Sie eine PIN für ein Formular erhalten haben, können Sie
+                        diesen direkt über die PIN abrufen und ausfüllen.</p>
 
                     <form #pinFormular="ngForm"
                           (ngSubmit)="submitPIN(pinInput.value)"
