--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -10,14 +10,18 @@
     <div *ngIf="mode === 'gmb'"
          class="alert alert-info alert-gmb"
          role="alert">
-        Ein Archiv der Landes&shy;grund&shy;stücks&shy;markt&shy;berichte finden sie <a [routerLink]="['/landesgrundstuecksmarktberichte']"
-           i18n>hier</a>.
+        <span i18n>
+            Ein Archiv der Landes&shy;grund&shy;stücks&shy;markt&shy;berichte finden sie
+        </span> <a [routerLink]="['/landesgrundstuecksmarktberichte']"
+              i18n>hier</a>.
     </div>
 
     <div *ngIf="mode === 'lmb'"
          class="alert alert-info alert-gmb"
          role="alert">
-        Die Grund&shy;stücks&shy;markt&shy;berichte finden sie <a [routerLink]="['/grundstuecksmarktberichte']"
+        <span i18n>
+              Die Grund&shy;stücks&shy;markt&shy;berichte finden sie
+        </span> <a [routerLink]="['/grundstuecksmarktberichte']"
            i18n>hier</a>.
     </div>
 
@@ -64,12 +68,9 @@
             <div class="row">
                 <h5 class="col-md-12 mb-0"
                     role="rowheader">
-                    <b *ngIf="rd.name !== 'Niedersachsen'">Gutachterausschuss </b>
+                    <b *ngIf="rd.name !== 'Niedersachsen'" i18n>Gutachterausschuss </b>
                     <b>{{rd.name}}</b>
                 </h5>
-                <!--<h5 class="col-md-7 mb-0"
-                    role="cell">(bis 2012)
-                </h5>-->
             </div>
         </div>
         <div class="card-body">
@@ -85,7 +86,11 @@
                            (keypress)="keyPress($event)">
                     <dt class="col-md-12"
                         role="rowheader">
-                        <label class="tab" for="dl{{bj.value['file'].split('.')[0]}}">
+                        <label
+                            class="tab"
+                            for="dl{{bj.value['file'].split('.')[0]}}"
+                            [attr.aria-label]="ariaLabelBericht(bj.key, rd.name)"
+                            >
                             <span>
                                 <i-bs name="plusCircle"
                                       class="remove-check"
@@ -114,6 +119,7 @@
                                 {{bj.value['file']}} (<a
                                   href="{{downloadPath}}/{{bj.value['fileurl']}}"
                                   target="_blank"
+                                  [attr.aria-label]="ariaLabelBericht(bj.key, rd.name, true)"
                                   i18n>Download</a>)
                             </span>
                         </div>
