--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -4,11 +4,14 @@
              class="p-0 border-bottom map-height"
              [class]="isCollapsed ? 'col d-block' : 'col-lg-6'">
             <!-- map component -->
-            <power-navigation [(stichtag)]="stichtag"
-                              [(teilmarkt)]="teilmarkt"
-                              [(flurstueck)]="flurstueck"
-                              [(features)]="features"
-                              [(adresse)]="adresse"></power-navigation>
+            <power-navigation [stichtag]="stichtag"
+                              [teilmarkt]="teilmarkt"
+                              [flurstueck]="flurstueck"
+                              [features]="features"
+                              [adresse]="adresse"
+                              [(isCollapsed)]="isCollapsed"
+                              [collapsed]="collapsed"
+                              [expanded]="expanded"></power-navigation>
             <!-- <power-bodenrichtwertkarte #map
                                        [(isCollapsed)]="isCollapsed"
                                        [collapsed]="collapsed"
