--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/navigation.component.html
@@ -70,8 +70,9 @@
 
     <div class="px-auto w-100 max-search-width"
          style="position: relative;">
-        <power-geosearch (selectResult)="onSearchSelect($event)">
-            <!-- [adresse]="adresse" -->
+        <power-geosearch (selectResult)="onAdressChange($event)"
+                         [adresse]="adresse">
+            <!-- (selectResult)="onSearchSelect($event)" -->
         </power-geosearch>
     </div>
 
@@ -127,12 +128,12 @@
             </button>
             <button class="btn dropdown-item nav-link"
                     type="button"
-                    role="menuitem">
-                <!-- (click)="enableLocationTracking()"
-                alt="Eigenen Standort anzeigen"
-                title="Eigenen Standort anzeigen"
-                i18n-alt
-                i18n-title> -->
+                    role="menuitem"
+                    (click)="map.enableLocationTracking()"
+                    alt="Eigenen Standort anzeigen"
+                    title="Eigenen Standort anzeigen"
+                    i18n-alt
+                    i18n-title>
                 <svg width="20px"
                      height="20px"
                      viewBox="0 0 16 16"
@@ -148,12 +149,12 @@
             <button class="btn dropdown-item nav-link"
                     [ngClass]="{'active': threeDActive}"
                     type="button"
-                    role="menuitem">
-                <!-- (click)="toggle3dView()"
-                alt="3D aktivieren/deaktivieren"
-                title="3D aktivieren/deaktivieren"
-                i18n-alt
-                i18n-title> -->
+                    role="menuitem"
+                    (click)="map.toggle3dView()"
+                    alt="3D aktivieren/deaktivieren"
+                    title="3D aktivieren/deaktivieren"
+                    i18n-alt
+                    i18n-title>
                 <svg width="20px"
                      height="20px"
                      viewBox="0 0 16 16"
@@ -172,11 +173,11 @@
                     role="menuitem"
                     class="btn dropdown-item nav-link"
                     alt="Markierung fokussieren"
-                    title="Markierung fokussieren">
-                <!-- *ngIf="marker.getLngLat() && marker.getLngLat().lat != 0"
-                (click)="flyTo(marker.getLngLat().lat, marker.getLngLat().lng, $event.type)"
-                i18n-alt
-                i18n-title> -->
+                    title="Markierung fokussieren"
+                    *ngIf="map.marker.getLngLat() && map.marker.getLngLat().lat != 0"
+                    (click)="map.flyTo(map.marker.getLngLat().lat, map.marker.getLngLat().lng, $event.type)"
+                    i18n-alt
+                    i18n-title>
                 <svg xmlns="http://www.w3.org/2000/svg"
                      width="20px"
                      height="20px"
@@ -195,13 +196,13 @@
             </button>
             <button class="btn dropdown-item nav-link"
                     type="button"
-                    role="menuitem">
-                <!-- (click)="resetMap()"
-                alt="Karte zurücksetzen"
-                title="Karte zurücksetzen"
-                aria-label="Karte und Adresseingabe zurücksetzen"
-                i18n-alt
-                i18n-title> -->
+                    role="menuitem"
+                    (click)="map.resetMap()"
+                    alt="Karte zurücksetzen"
+                    title="Karte zurücksetzen"
+                    aria-label="Karte und Adresseingabe zurücksetzen"
+                    i18n-alt
+                    i18n-title>
                 <svg width="20px"
                      height="20px"
                      viewBox="0 0 16 16"
@@ -218,10 +219,17 @@
     </div>
 </div>
 
-<power-bodenrichtwertkarte [(stichtag)]="stichtag"
-                           [(teilmarkt)]="teilmarkt"
-                           [(features)]="features"
-                           [(adresse)]="adresse">
+<power-bodenrichtwertkarte #map
+                           [stichtag]="stichtag"
+                           [teilmarkt]="teilmarkt"
+                           [lat]="lat"
+                           [lng]="lng"
+                           [(isCollapsed)]="isCollapsed"
+                           [collapsed]="collapsed"
+                           [expanded]="expanded"
+                           (latLngChange)="updateLatLng($event)"
+                           (lonChange)="lng">
+    <!-- [flurstueck]="flurstueck" -->
 </power-bodenrichtwertkarte>
 
 <power-flurstueck-search #flurstueckssearch
