Updated frontend to support SSR

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -1,5 +1,5 @@
 <div class="container my-4"
-     *ngIf="configService.config.modules.includes('bodenrichtwerte-altsystem') && showPrintNotice">
+     *ngIf="config.modules.includes('bodenrichtwerte-altsystem') && showPrintNotice">
     <alert type="info"
            role="alert">
         <button i18n-aria-label
