--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/karte/bodenrichtwert-karte.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper"
      [class]="isCollapsed ? '' : 'border'">
     <!-- desktop -->
-    <div [class]="isCollapsed ? 'd-none d-lg-block' : 'd-none d-xxl-block'">
-        <!-- <div class="nav-scroller bg-white shadow-sm border-top">
+    <!-- <div [class]="isCollapsed ? 'd-none d-lg-block' : 'd-none d-xxl-block'"> -->
+    <!-- <div class="nav-scroller bg-white shadow-sm border-top">
             <nav class="nav nav-underline d-flex justify-content-between p-0">
                 <div class="nav">
                     <div class="btn-group d-flex">
@@ -221,7 +221,7 @@
                 </div>
             </nav>
         </div> -->
-    </div>
+    <!-- </div> -->
 
     <!-- mobile -->
     <!-- <div [class]="isCollapsed ? 'd-lg-none' : 'd-xxl-none'">
